@@ -163,7 +163,7 @@ options=[
 "--searchdesc",   "--selective",
 "--skipfirst",
 "--tree",
-"--update",       "--upgradeonly",
+"--update",
 "--usepkg",       "--usepkgonly",
 "--verbose",      "--version"
 ]
@@ -178,7 +178,6 @@ shortmapping={
 "f":"--fetchonly", "F":"--fetch-all-uri",
 "g":"--getbinpkg", "G":"--getbinpkgonly",
 "h":"--help",
-"i":"--inject",
 "k":"--usepkg",    "K":"--usepkgonly",
 "l":"--changelog",
 "n":"--noreplace", "N":"--newuse",
@@ -187,7 +186,7 @@ shortmapping={
 "q":"--quiet",
 "s":"--search",    "S":"--searchdesc",
 't':"--tree",
-"u":"--update",    "U":"--upgradeonly",
+"u":"--update",
 "v":"--verbose",   "V":"--version"
 }
 
@@ -285,7 +284,7 @@ if "moo" in myfiles:
             (__)\       )\/\  
                 ||----w |
                 ||     ||
-																															 
+
 """
 
 if (myaction in ["world", "system"]) and myfiles:
@@ -338,17 +337,6 @@ if ("--getbinpkg" in myopts) and not ("--usepkg" in myopts):
 if ("--usepkgonly" in myopts) and not ("--usepkg" in myopts):
 	myopts.append("--usepkg")
 
-# Print deprecation warning for -U
-if ("--upgradeonly" in myopts):
-	print
-	print red("*** Warning: --upgradeonly is a deprecated option in portage-"+portage.VERSION)
-	print red("***          and will likely be removed in a future version.")
-	print
-	# Also allow -U to apply --update/-u
-	if not ("--update" in myopts):
-		print ">>> --upgradeonly implies --update... adding --update to options."
-		myopts.append("--update")
-
 # Also allow -l to apply --pretend/-p, but if already in --ask mode
 if ("--changelog" in myopts) and not (("--pretend" in myopts) or ("--ask" in myopts)):
 	print ">>> --changelog implies --pretend... adding --pretend to options."
@@ -387,16 +375,6 @@ if portage.settings["CLEAN_DELAY"]:
 if portage.settings["EMERGE_WARNING_DELAY"]:
 	EMERGE_WARNING_DELAY = int("0"+portage.settings["EMERGE_WARNING_DELAY"])
 
-if "inject" == myaction:
-	print
-	print red("*** --inject has been deprecated.")
-	print red("*** If you manage a piece of software yourself, add it's name and")
-	print red("*** version (eg foo/bar-1.0) to /etc/portage/profile/package.provided.")
-	print red("*** If you want to prevent portage from upgrading a package, add it to")
-	print red("*** /etc/portage/package.mask prepending it with '>' (eg >foo/bar-1.0)")
-	print red("*** For more information on fine-grained portage control, please see")
-	print red("*** the portage man page.")
-	print
 
 def emergelog(mystr,short_msg=None):
 	if "notitles" not in portage.features:
@@ -1127,19 +1105,6 @@ class depgraph:
 		# We're true here unless we are missing binaries.
 		return (not missing,myfavorites)
 
-	def is_newer_ver_installed(self,myroot,pkg,pkgver):
-		"if there is a version of pkg installed newer than pkgver, return it"
-		vardbapi=portage.db[myroot]["vartree"].dbapi
-
-		matches=portage.db[myroot]["vartree"].dbapi.match(pkg)
-		if matches:
-			myslot=portage.db["/"]["porttree"].getslot(pkgver)
-			for match in matches:
-				if portage_versions.pkgcmp(portage_versions.catpkgsplit(pkgver)[1:], portage_versions.catpkgsplit(match)[1:]) < 0:
-					curslot=portage.db[myroot]["vartree"].getslot(match)
-					if curslot == myslot:
-						return match
-
 	def select_dep(self,myroot,depstring,myparent=None,arg=None,myuse=None):
 		"given a dependency string, create the appropriate depgraph and return 1 on success and 0 on failure"
 		if "--debug" in myopts:
@@ -1262,22 +1227,6 @@ class depgraph:
 					else:
 						myeb_pkg = None
 
-				if "--upgradeonly" in myopts:
-					# Check that there isn't a newer version of this package already installed
-					cand = None
-					try:
-						# XXX: This can throw an exception if the ebuild doesn't exist
-						if myeb:
-							cand=self.is_newer_ver_installed(myroot,x,myeb)
-						elif myeb_pkg:
-							cand=self.is_newer_ver_installed(myroot,x,myeb_pkg)
-					except SystemExit, e:
-						raise # Needed else can't exit
-					except Exception, e:
-						print "Warning: "+str(e)
-					if cand:
-						myeb=cand
-				
 				if myeb:
 					myk=["ebuild",myroot,myeb]
 				elif myeb_pkg:
@@ -1359,11 +1308,6 @@ class depgraph:
 			if not myeb:
 				#this is an unavailable world entry; just continue
 				continue
-
-			if "--upgradeonly" in myopts:
-				cand=self.is_newer_ver_installed(portage.root,mydep,myeb)
-				if cand:
-					myeb=cand
 
 			#THIS NEXT BUNCH OF CODE NEEDS TO BE REPLACED TO SUPPORT WORLD ANTI-DEPS
 			#if mydep2[0]=="!":, etc.
@@ -3299,35 +3243,6 @@ elif "search"==myaction:
 				print "\n!!! Regular expression error in \"%s\": %s" % ( mysearch, comment )
 				sys.exit(1)
 			searchinstance.output()
-elif "inject"==myaction:
-	if not myfiles:
-		print "emerge: please specify at least one cat/pkg-ver to inject."
-		sys.exit(1)
-	if "--pretend" in myopts:
-		print "emerge: the \"inject\" action does not support \"--pretend.\""
-		sys.exit(1)
-	for x in myfiles:
-		if x[0] in [">","<","=","!"]:
-			print "!!! '"+x+"' is an invalid specification."
-			print "!!! Must be 'category/package-version' with no other symbols."
-			print
-			continue
-		mycps=portage_versions.catpkgsplit(x)
-		if (not mycps) or (mycps[0]=="null"):
-			print "!!!",x,"is not a specific cat/pkg-version, skipping..."
-			continue
-		if portage.db["/"]["vartree"].exists_specific(x):
-			print "!!! Not injecting",x+"; Package already exists."
-		else:
-			if "--ask" in myopts:
-				if userquery("Do you want to inject the package %s?" % x)=="No":
-					print
-					print "Quitting."
-					print
-					sys.exit(0)
-			portage.db["/"]["vartree"].dbapi.cpv_inject(x)
-			print ">>> Injected",x+"."
-			emergelog(" === inject: "+x)
 elif "unmerge"==myaction or "prune"==myaction or "clean"==myaction:
 	if 1==unmerge(myaction, myfiles):
 		post_emerge()
